# git-data-distiller

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_PLAN.md  OPTIMIZATIONS.md  README.md  ROADMAP.md  TESTING_REPORT.md  TODO_FIXES.md  git-distiller.yaml.example  pyproject.toml  run_benchmarks.py  run_tests.sh  test-review.md
.obsidian/: workspace.json
benchmarks/: __init__.py  benchmark_report.txt  performance_benchmark.py
examples/: custom_template.md.j2  example_usage.py
src/git_data_distiller/: __init__.py  cache.py  cli.py  config.py  exceptions.py  extractors.py  formatters.py  github_client.py  models.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_github_client.py  test_pagination.py  test_parallel_methods.py
